--- a/index.html
+++ b/index.html
@@ -22,5 +22,27 @@
             </div>
         </div>
     </section>
+
+
+    <section class="section-two">
+        <div class="featured-container">
+            <div class="featured-content">
+                <h1 class="featured-title">Our Featured Flowers</h1>
+                <p class="featured-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="featured-image">
+                <figure class="figure-one">
+                    <div class="image-div"><img class="flower-image" src="Images/pngwing 6.png"></div>
+                </figure>
+                <figure class="figure-two">
+                    <div class="image-div"><img class="flower-image" src="Images/pngwing 5.png"></div>
+                </figure>
+                <figure class="figure-three">
+                    <div class="image-div"><img class="flower-image" src="Images/pngwing 7.png"></div>
+                </figure>
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
