--- a/index.html
+++ b/index.html
@@ -44,5 +44,35 @@
             </div>
         </div>
     </section>
+
+
+    <section class="section-three">
+        <div class="deal-container">
+            <div class="deal-content">
+                <h1 class="deal-title">Hot Deal ! Sale Up To 25% Off</h1>
+                <p class="deal-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <button class="button">Sign Up</button>
+            </div>
+            <div class="deal-image">
+                <img src="Images/pngwing 8.png">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="section-four">
+        <div class="instagram">
+            <div class="instagram-content">
+                <h1 class="instagram-title">Instagram</h1>
+                <p class="instagram-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="instagram-image">
+                <img src="Images/Flower 01.png">
+                <img src="Images/Rectangle 4.png">
+                <img src="Images/Rectangle 5.png">
+                <img src="Images/Rectangle 6.png">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
