--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
                 <p class="featured-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
             </div>
             <div class="featured-image">
-                <figure class="figure-one">
-                    <div class="image-div"><img class="flower-image" src="Images/pngwing 6.png"></div>
-                </figure>
-                <figure class="figure-two">
-                    <div class="image-div"><img class="flower-image" src="Images/pngwing 5.png"></div>
-                </figure>
-                <figure class="figure-three">
-                    <div class="image-div"><img class="flower-image" src="Images/pngwing 7.png"></div>
-                </figure>
+
+                <div class="figure-one">
+                    <div class="image-wrapper image-wrapper-one"><img src="Images/pngwing 6.png"></div>
+                    <h4 class="caption">Pink Flower Tree</h4>
+                </div>
                 
+                <div class="figure-two">
+                    <div class="image-wrapper image-wrapper-two"><img src="Images/pngwing 5.png"></div>
+                    <h4 class="caption">Pink Flower Tree</h4>
+                </div>
+                
+                <div class="figure-three">
+                    <div class="image-wrapper image-wrapper-three"><img src="Images/pngwing 7.png"></div>
+                    <h4 class="caption">Pink Flower Tree</h4>
+                </div>
+
             </div>
         </div>
     </section>
@@ -49,7 +55,7 @@
     <section class="section-three">
         <div class="deal-container">
             <div class="deal-content">
-                <h1 class="deal-title">Hot Deal ! Sale Up To 25% Off</h1>
+                <h1 class="deal-title">Hot Deal ! Sale Up To 25% <span style="color:#E55473">Off</span></h1>
                 <p class="deal-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
                 <button class="button">Sign Up</button>
             </div>
@@ -72,6 +78,14 @@
                 <img src="Images/Rectangle 5.png">
                 <img src="Images/Rectangle 6.png">
             </div>
+        </div>
+    </section>
+
+
+    <section class="section-five">
+        <div class="latest-deal">
+            <h1 class="latest-deal-title">Get The Latest Deals</h1>
+            <p class="latest-deal-description">$30 coupon for first shopping</p>
         </div>
     </section>
 </body>
