--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
         <div class="latest-deal">
             <h1 class="latest-deal-title">Get The Latest Deals</h1>
             <p class="latest-deal-description">$30 coupon for first shopping</p>
+            <input type="text" placeholder="Enter your email here.....">
+            <input type="submit" value="Subcribe" class="button">
         </div>
     </section>
+
+    <section class="section-seven"></section>
+        <div class="footer">
+            <h4 class="footer-title"><span style="color:#E55473">Flower</span>Shop</h4>
+            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            <p class="footer-copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
 </body>
 </html>
