--- a/index.html
+++ b/index.html
@@ -83,6 +83,44 @@
 
 
     <section class="section-five">
+        <div class="popular-products">
+            <div class="popular-content">
+                <h4 class="popular-title">Popular Products</h4>
+                <p class="popular-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="popular-image">
+                <div class="figure-four">
+                    <img src="Images/Rectangle 5.png">
+                    <h4 class="popular-caption">Baby boy perfect gift</h4>
+                    <h3 class="popular-pricing">$12-$25</h3>
+                    <button class="button-secondary">Add to cart</button>
+                </div>
+                <div class="figure-five">
+                    <img src="Images/Flower 01.png">
+                    <h4 class="popular-caption">Rose,garvera and veranda</h4>
+                    <h3 class="popular-pricing">$26-$50</h3>
+                    <button class="button-secondary">Add to cart</button>
+                </div>
+                <div class="figure-six">
+                    <img src="Images/Rectangle 6.png">
+                    <h4 class="popular-caption">Golden autumn</h4>
+                    <h3 class="popular-pricing">$51-$75</h3>
+                    <button class="button-secondary">Add to cart</button>
+                </div>
+                <div class="figure-seven">
+                    <img src="Images/Rectangle 4.png">
+                    <h4 class="popular-caption">Vera wang purest grace</h4>
+                    <h3 class="popular-pricing">$76-$100</h3>
+                    <button class="button-secondary">Add to cart</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="section-six">
         <div class="latest-deal">
             <h1 class="latest-deal-title">Get The Latest Deals</h1>
             <p class="latest-deal-description">$30 coupon for first shopping</p>
